...
        child: Row(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Icon(_isListening ? Icons.stop : Icons.play_arrow),
            const SizedBox(width: 12),
            Text(
              _isListening ? '녹음 중지하기' : '녹음 시작하기',
              style:
                  const TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
            ),
          ],
        ),
      ),
...
